# UrFU-Drone-Detection-Stream-Server

./: .gitignore  Makefile  pyproject.toml
ci/linux/: docker.sh  install.sh
ci/linux/systemd/: demo-stream.service  drone-stream.conf  drone-stream.service  drone-telegram.conf  drone-telegram.service
demo/: start.sh
docker/: docker-compose.yml
src/app/: __init__.py  init.py
src/app/data/tracker/: byte_tracker.yaml
src/app/stream/: start.py
src/app/telegram/: echo.py  hendler.py
src/app/telegram/handlers/: _detection_drone.py  utils.py
src/app/video/: base.py
src/app/video/analyzer/: __init__.py  di.py  dto.py  start.py
src/app/video/stream/: _start.py  start.py
src/app/video/test/: start.py
src/entities/dto/: __init__.py  drone_detection_result.py
src/feature/classification_object/: __init__.py  di.py  dto.py  service.py
src/feature/detection_object/: __init__.py  di.py  dto.py  service.py
src/feature/get_drone_type_info/: __init__.py  dto.py  service.py  utils.py
src/feature/get_drone_type_info/db/: info.json
src/feature/rtsp_stream/: __init__.py  di.py  service.py
src/feature/save_detection_info/: __init__.py  di.py  dto.py  service.py
src/feature/send_to_rtsp/: service.py
src/feature/update_user_location/: __init__.py  di.py  service.py
src/feature/video_analyzer/: __init__.py  services.py
src/feature/video_writer/: __init__.py  di.py  service.py
src/shared/: typing.py
src/shared/api/: logger.py  mongo_db.py
src/shared/api/hls/: _get_m3u8.py
src/shared/configs/: __init__.py  _mode.py  _settings.py
(+20 files in other folders)
