[project]
name = "drone-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "X0re4ik",email = "xoore4ik@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "ultralytics (>=8.3.143,<9.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "lap (>=0.5.12)",
    "pymongo (>=4.13.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"

